[FIX] Connexion php à la bdd locale [FEATURES] Ajout d'un choix par défaut [FEATURES] Ajout d'une description par classe

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,4 @@
+/* BRANCHE PERSONNAGE */
 .classe{
     font: 1em "Bookman", serif;
     font-size: 1.5em;
@@ -20,4 +21,4 @@
 
 .stats div {
     margin-right: 1.5em;
-}
+}/* FIN BRANCHE PERSONNAGE */
