[FEATURES] Ajout non complet de l'affichage des stats des classes

--- a/styles/main.css
+++ b/styles/main.css
@@ -13,12 +13,12 @@
     float: left;
 }
 
-.stats {
+#stats {
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
-.stats div {
+#stats div {
     margin-right: 1.5em;
 }/* FIN BRANCHE PERSONNAGE */
