--- a/styles/main.css
+++ b/styles/main.css
@@ -79,7 +79,6 @@ p, li, span {
     background-color: var(--accent-rouge); /* Change à l'accent rouge au survol */
 }
 
-
 .button:hover, .btn:hover {
     background-color: var(--accent-rouge);
 }
@@ -164,27 +163,28 @@ input:focus, textarea:focus {
     align-items: center;
 }
 
-.img_base{
-    background-image: url('../images/scene-fantastique-en-3d.jpg');
+.img_base {
     position: relative;
     width: 100%;
     height: 900px;
-    
+    background-image: url('../images/scene-fantastique-en-3d.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
-/* Texte par-dessus l'image */
+/* Disposition des colonnes */
+.image-column, .carousel-column {
+    width: 50%; /* Chaque colonne occupe 50% de la largeur du main */
+    padding: 20px; /* Espacement interne */
+}
+
 .hero-text {
     color: white;
     text-align: center;
     font-weight: bold;
     z-index: 10;
     text-shadow: 2px 2px 4px black;
-    
 }
 
 .hero-text h1 {
@@ -202,8 +202,26 @@ input:focus, textarea:focus {
     margin: 10px 0;
 }
 
-.btn:hover {
-    background-color: #0056b3;
+/* Carrousel */
+#imageCarousel {
+    width: 100%; /* Le carrousel prend toute la largeur de la colonne */
+    margin: 0 auto; /* Centrer le carrousel */
+}
+
+.carousel-inner {
+    display: flex;
+    justify-content: center;
+}
+
+.carousel-item {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.carousel-item img {
+    width: 48%; /* Chaque image prend 48% de la largeur pour laisser de l'espace entre elles */
+    object-fit: cover; /* Garder le ratio des images */
 }
 
 /* Footer */
@@ -230,15 +248,14 @@ footer p {
     min-height: 100%; /* S'assure que l'élément prend toute la hauteur disponible */
 }
 
-
-.couleur-bouton{
+.couleur-bouton {
     background-color: var(--accent-or); 
     border-radius: 7.5px;
     min-height: 2.5em;
     border: #ffffff;
 }
 
-.logo_dungeon{
+.logo_dungeon {
     max-width: 1em;
     max-height: 1em;
 }
